kinda fix long titles overflow

--- a/src/components/movies/MovieCard.css
+++ b/src/components/movies/MovieCard.css
@@ -14,13 +14,20 @@
 		max-width: 100%;
 		font-weight: bold;
 		font-size: 1.4rem;
-		overflow: hidden;
-		text-wrap: nowrap;
+		text-align: center;
 		padding-inline: 10px;
+	}
+
+	& h3.wrapped {
+		font-size: 1.2rem;
 	}
 
 	& img {
 		width: 100%;
 		height: 18rem;
 	}
+}
+
+.card.small {
+	gap: 0.4rem;
 }
